cmake_minimum_required(VERSION 3.9)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)
include_directories(${PROJECT_SOURCE_DIR}/array)
include_directories(${PROJECT_SOURCE_DIR}/binary_search)
include_directories(${PROJECT_SOURCE_DIR}/linked_list)
include_directories(${PROJECT_SOURCE_DIR}/string)

include_directories(${PROJECT_SOURCE_DIR}/include)


add_executable(561_array_partition1 array/561_array_partition1.cpp)
add_executable(766_Toeplitz_Matrix array/766_Toeplitz_Matrix.cpp)
add_executable(566_Reshape_the_Matrix array/566_Reshape_the_Matrix.cpp)
add_executable(485_Max_Consecutive_Ones array/485_Max_Consecutive_Ones.cpp)
add_executable(695_Max_Area_of_Island array/695_Max_Area_of_Island.cpp)
add_executable(283_Move_Zeroes array/283_Move_Zeroes.cpp)
add_executable(448_Find_All_Numbers_Disappeared_in_an_Array array/448_Find_All_Numbers_Disappeared_in_an_Array.cpp)
add_executable(717_1-bit_and_2-bit_Characters array/717_1-bit_and_2-bit_Characters.cpp)
add_executable(169_Majority_Element array/169_Majority_Element.cpp)
add_executable(167_Two_Sum_II_Input_array_is_sorted array/167_Two_Sum_II_Input_array_is_sorted.cpp)
add_executable(217_Contains_Duplicate array/217_Contains_Duplicate.cpp)
add_executable(697_Degree_of_an_Array array/697_Degree_of_an_Array.cpp)
add_executable(661_Image_Smoother array/661_Image_Smoother.cpp)
add_executable(268_Missing_Number array/268_Missing_Number.cpp)
add_executable(628_Maximum_Product_of_Three_Numbers array/628_Maximum_Product_of_Three_Numbers.cpp)

add_executable(list_node_test array/list_node_test.cpp)
add_executable(206_Reverse_Linked_List linked_list/206_Reverse_Linked_List.cpp)
add_executable(92_Reverse_Linked_List_II linked_list/92_Reverse_Linked_List_II.cpp)



